# AgentGovern-OS

./: .env.example  .gitignore  Makefile  README.md  agentgovern.yaml  docker-compose.yml  pyproject.toml
cli/: MANIFEST.in  README.md  agentgovern.yaml.example  pyproject.toml  pyrightconfig.json  setup.py
cli/agentgovern/: __init__.py  cli.py
cli/agentgovern/client/: __init__.py  api.py
cli/agentgovern/policy/: __init__.py  engine.py
cli/agentgovern/policy/bundles/: default.json  enterprise.json  eu_ai_act.json
cli/agentgovern/report/: __init__.py  abom.py  html.py  sarif.py  terminal.py
cli/agentgovern/scanner/: __init__.py  authority.py  codeprint.py  dependency.py  manifest.py
connectors/: MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
connectors/anthropic/: __init__.py  governed_client.py
connectors/autogen/: __init__.py  governed_agent.py
connectors/crewai/: __init__.py  governed_crew.py
connectors/generic/: __init__.py  gateway.py
connectors/langchain/: __init__.py  governed_executor.py
connectors/openai/: __init__.py  governed_runner.py
connectors/sdk/: __init__.py  govcore.py
docs/: API_REFERENCE.md  CONNECTORS.md  DEMO_SCENARIO.md  QUICKSTART.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: sap_50_events_catalog.json  universal_50_events_catalog.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/components/ui/: Card.tsx  EnvironmentTopology.tsx  MetricCard.tsx  RecentAuditLedger.tsx
frontend/src/hooks/: useRealtimePulse.ts
frontend/src/pages/: Approvals.tsx  AuditLedger.tsx  Demo.tsx  Fleet.tsx  Gateways.tsx  LandingPage.tsx  Overview.tsx  Policy.tsx  QICacheAnalytics.tsx  Settings.tsx  TrustTopology.tsx
infra/: prometheus.yml
scripts/: demo_flow.py  generate_api_reference.py  seed_demo.py
sdk/agentgovern/: __init__.py  client.py
services/crewai-engine/: main.py  requirements.txt
services/crewai-engine/agents/: core_crew.py  meta_crew.py
services/crewai-engine/ancestor/: __init__.py  decision_ledger.py
services/crewai-engine/cache/: cache_callback.py  qicache_engine.py
services/crewai-engine/config/: llm_config.py
services/crewai-engine/crews/: dispute_crew.py  meta_crew.py
services/crewai-engine/genesis/: __init__.py  dna_sequencer.py  gene_registry.py
services/crewai-engine/memory/: __init__.py  chroma_store.py  decision_embedder.py
services/crewai-engine/pulse/: __init__.py  trust_service.py
services/crewai-engine/tools/: __init__.py  audit_logger.py  cache_manager.py  credit_api.py  dna_inspector.py  document_search.py  fraud_detector.py  human_escalator.py  payment_history.py  policy_checker.py  prophecy_simulator.py  sap_connector.py  settlement_calculator.py  trust_scorer.py
services/crewai-engine/workers/: celery_app.py
services/crewai-engine/workers/tasks/: cache_tasks.py  meta_crew_tasks.py
services/edge-gateway/: main.py
services/edge-gateway/identity/: __init__.py  local_enforcer.py  local_ledger.py  passport_verifier.py  sync_client.py
services/governance-api/: alembic.ini  config.py  database.py  main.py  models.py  pyrightconfig.json  requirements.txt  schemas.py  seed.py  seed_demo.py
services/governance-api/alembic/: env.py
services/governance-api/alembic/versions/: 0001_initial_schema.py  0002_add_audit_log.py
services/governance-api/middleware/: auth.py  rate_limiter.py  request_signing.py  security_headers.py
services/governance-api/policy/: compliance.py  distribution.py  prophecy.py
services/governance-api/routers/: audit.py  auth.py  cache.py  contract.py  eclipse.py  gateways.py  gdpr.py  genesis.py  governance.py  pulse.py  realtime.py  sentinel.py
services/governance-api/services/: dna_engine.py
services/governance-api/tools/: debug_metrics.py  populate.py  test_escalation.py
services/identity-service/: environment_registry.py  passport.py
services/ms-copilot-adapter/: main.py
services/sap-btp-adapter/: __init__.py  main.py
services/servicenow-adapter/: main.py
services/sf-agentforce-adapter/: main.py
