[project]
name = "agentgovern-os"
version = "0.1.0"
description = "Enterprise-grade Digital Colleague Governance Platform"
requires-python = ">=3.11"
dependencies = [
    # === CrewAI (MANDATORY — organizer requirement) ===
    "crewai[tools]>=0.100.0",

    # === FastAPI Backend ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",             # PostgreSQL async driver
    "alembic>=1.14.0",             # Database migrations
    "greenlet>=3.1.0",             # Required by SQLAlchemy async

    # === Cache & Messaging ===
    "redis[hiredis]>=5.2.0",       # Redis client with C parser

    # === Vector Memory ===
    "chromadb>=0.5.0",

    # === LLM Providers ===
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # === Task Scheduling ===
    "celery[redis]>=5.4.0",

    # === Security ===
    "python-jose[cryptography]>=3.3.0",   # JWT
    "passlib[bcrypt]>=1.7.4",
    "pynacl>=1.5.0",                       # Agent passport signing

    # === Utilities ===
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",             # Retry logic
    "structlog>=24.4.0",           # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
ml = [
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",         # Anomaly detection (Isolation Forest)
    "sentence-transformers>=3.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=services --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
