[project]
name = "agentgovern"
version = "0.1.0"
description = "The open-source AI Agent Governance scanner — Black Duck for AI Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "governance", "security", "compliance", "llm", "crewai", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.12.0",            # CLI framework
    "rich>=13.7.0",             # Terminal UI
    "pyyaml>=6.0.1",            # YAML parsing
    "httpx>=0.28.0",            # HTTP client for server sync
    "jsonschema>=4.23.0",       # Manifest validation
    "pathspec>=0.12.0",         # .gitignore-style path filtering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
watch = [
    "watchdog>=6.0.0",  # For --watch mode
]

[project.scripts]
agentgovern = "agentgovern.cli:app"

[project.urls]
Homepage = "https://github.com/Ritinpaul/AgentGovern-OS"
Repository = "https://github.com/Ritinpaul/AgentGovern-OS"
Documentation = "https://github.com/Ritinpaul/AgentGovern-OS/tree/main/cli"
Issues = "https://github.com/Ritinpaul/AgentGovern-OS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentgovern"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
