[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgovern-sdk"
version = "0.1.0"
description = "Universal SDK for AI Agent Governance - Core SDK and Multi-Framework Connectors"
readme = "connectors/README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "AgentGovern Contributors", email = "contact@agentgovern.dev"}
]
keywords = [
    "ai-governance",
    "agent-governance",
    "ai-safety",
    "llm-governance",
    "agent-framework",
    "crewai",
    "langchain",
    "openai-agents",
    "anthropic",
    "autogen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.30.0"]
openai = ["openai-agents>=0.1.0"]
anthropic = ["anthropic>=0.21.0"]
langchain = ["langchain>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]

# Install all connectors
all = [
    "crewai>=0.30.0",
    "openai-agents>=0.1.0",
    "anthropic>=0.21.0",
    "langchain>=0.1.0",
    "pyautogen>=0.2.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/agentgovern/agentgovern-sdk"
Documentation = "https://docs.agentgovern.dev"
Repository = "https://github.com/agentgovern/agentgovern-sdk"
"Bug Tracker" = "https://github.com/agentgovern/agentgovern-sdk/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=connectors --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
